--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-    "name": "preact-svg-loader",
-    "version": "0.2.0",
+    "name": "wmr-svg-loader",
+    "version": "0.1.0",
     "description": "Load svg files as preact components.",
     "main": "src/index.js",
     "repository": "https://github.com/VuexLtd/preact-svg-loader",
     "author": "James Birtles <james.birtles@vuex.io>",
     "license": "MIT",
+    "type": "module",
     "scripts": {
         "test": "mocha",
         "lint": "eslint src test .eslintrc.js --ignore-pattern '!.eslintrc.js'",
@@ -13,7 +14,6 @@
         "prepublishOnly": "npm run test"
     },
     "dependencies": {
-        "loader-utils": "^1.1.0",
         "htmlparser": "^1.7.7"
     },
     "devDependencies": {
